--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "infyomlabs/swagger-generator": "dev-master",
         "jlapp/swaggervel": "dev-master",
         "kalnoy/nestedset": "^4.3",
+        "laracasts/utilities": "^3.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.7.0",
